# scriptorium

./: .gitignore  README.md  handoff.md  latex-review-webapp-requirements.md  package.json  test-ref.bib  todo.txt  tsconfig.json  部署流程.md
apps/web/: index.html
apps/web/src/: App.tsx  styles.css
apps/web/src/components/: FileTree.tsx  LatexEditor.tsx  PdfPreview.tsx  ReviewPanel.tsx
apps/web/src/platform/: webProviders.ts
docs/superpowers/plans/: 2026-07-10-diff-review-test.md  2026-07-10-latex-document-navigation.md  2026-07-10-reference-formatter-integration.md  2026-07-10-remove-legacy-node-server.md  2026-07-10-theorem-navigation.md  2026-07-11-definition-navigation.md  2026-07-11-editor-long-text-layout.md  2026-07-11-preserve-compound-surnames-and-6g.md  2026-07-11-resizable-document-pane.md  2026-07-11-simple-user-storage.md
sample-project/: main.tex
scriptorium/: Cargo.toml  README.md  diff-review-test-checklist.md  handoff.md  latex-review-webapp-requirements.md  package-lock.json  package.json
scriptorium/apps/local-server-rs/: Cargo.toml
scriptorium/apps/local-server-rs/src/: auth.rs  config.rs  errors.rs  latex_compiler.rs  lib.rs  main.rs  project_files.rs  project_index.rs  review_sessions.rs  server.rs  types.rs
scriptorium/apps/web/: package.json  vite.config.ts
scriptorium/apps/web-local-server/: server.mjs
scriptorium/sample-project/: original.tex
scriptorium/scripts/: dev.mjs
scriptorium/skills/code-doc-cleanup/: SKILL.md
scriptorium/skills/git-submit/: SKILL.md
scripts/: dev.mjs
论文写作规范/: 论文写作规范.md
(+16 files in other folders)
