[package]
name = "scriptorium-local-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
axum = "0.7"
base64 = "0.22"
chrono = "0.4"
hex = "0.4"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
